<resources>
    <string name="app_name">Nightcorer</string>
    <string name="ok">OK</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_reason">This app needs the permission to read files in order to find your music.</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="loading">Loading</string>
    <string name="album_cover">album cover</string>
    <string name="previous">previous</string>
    <string name="play_pause">play/pause</string>
    <string name="next">next</string>
    <string name="loop">loop</string>
    <string name="shuffle">shuffle</string>
</resources>
